<resources>
    <string name="app_name">WakeMeUpWhenMyStopComes</string>
    <string name="switch1">Vibrate</string>
    <string name="switch2">Ring</string>
    <string name="radius">Radius</string>
    <string name="volume">Volume</string>
    <string name="set">Set trigger</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="appTitle">WMUWMSC</string>
    <string name="version">Version 1.0</string>
    <string name="Dev">Developer: Khan</string>
    <string name="thanks">Special thanks to Madhu for giving me this idea!</string>
    <string name="email">Lzmkhan@yahoo.com</string>
    <string name="disclaimer">This app does not collect any information. You can use it offline too!</string>

</resources>
